# IAVA-Analyzer

./: .gitignore  .ocamlforamt  dune-project  output_4.txt  variable_analysis.opam
cpp_frontend/: CMakeLists.txt
cpp_frontend/examples/: sample.cpp
cpp_frontend/src/: DumpAction.cpp  DumpAction.h  DumpVisitor.cpp  IR.h  Translator.cpp  Translator.h  TranslatorAction.cpp  TranslatorConsumer.cpp  TranslatorConsumer.h  main.cpp
cpp_frontend/src/dump/: DumpAction.cpp  DumpVisitor.cpp  DumpVisitor.h
cpp_frontend/src/ir/: IR.h  IRPrinter.cpp  IRPrinter.h
cpp_frontend/src/lowering/: AstToIr.cpp  AstToIr.h
cpp_frontend/src/translator/: Translator.cpp  Translator.h  TranslatorAction.cpp  TranslatorAction.h  TranslatorConsumer.cpp
examples/: 0.si  1.si  2.si  3.si  4-1.si  4.si  4_output.txt  5.si  6.si  7.si  8.si  9.si  if_0.si  if_1.si  while_0.si  while_0_output.txt  while_1.si  while_2.si
lib/: abs_dom.ml  analyzer.ml  domain.ml  dune  itv.ml  lexer.mll  lexer_w.mll  parser.mly  parser_w.mly  syntax.ml  syntax.mli
test/: dune
